#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([netmanage], [1.0], [david.leblanc@freestyletechnology.com.au])
AC_CONFIG_SRCDIR([src/config.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC([gcc])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
